[gd_scene load_steps=2 format=3 uid="uid://dqqcmm1gsg8ry"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_b3su1"]

[node name="mainMenu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3su1")

[node name="btnSinglePlayer" type="Button" parent="."]
layout_mode = 2
text = "Single Player"

[node name="btnHelp" type="Button" parent="."]
layout_mode = 2
text = "Help"

[node name="btnExit" type="Button" parent="."]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="btnSinglePlayer" to="." method="_on_btn_single_player_pressed"]
[connection signal="pressed" from="btnHelp" to="." method="_on_btn_help_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
